--- a/C/Crocs/Crocs_SpringSummer_2019/ad.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ad.html
@@ -98,7 +98,7 @@
               productShadowImage: '../assets/'+ data.TEXT_2 + '/' + data.IMAGE_URL5,
               productText: data.TEXT_1,
               ctaText: data.TEXT_5,
-              clickUrl: 'https://adobe.com/#' + data.TEXT_2,
+              clickUrl: data.PRODUCT_URL,
             });
           }
           if(data.AD_SIZE == '300x250') {
@@ -120,7 +120,7 @@
               productShadowImage: '../assets/'+ data.TEXT_2 + '/' + data.IMAGE_URL5,
               productText: data.TEXT_1,
               ctaText: data.TEXT_5,
-              clickUrl: 'https://adobe.com/#' + data.TEXT_2,
+              clickUrl: data.PRODUCT_URL,
             });
           }
 
