--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Template1/Ads/300x250/CON/O365_CARTABNDMCON_USA_300x250_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Template1/Ads/300x250/CON/O365_CARTABNDMCON_USA_300x250_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm
@@ -109,10 +109,15 @@ function handleComplete(evt,comp) {
 
 	var loadFont = false
 	var loadBody = false
+	var loadImage = false
+	var image = new Image();
+	image.onload = function() { loaded('image'); }
+	image.src = 'images/' + document.title + '_atlas_.png';
 	function loaded(type) {
 		if (type=='font') loadFont=true
 		if (type=='body') loadBody=true
-		if (loadFont && loadBody) init()
+		if (type=='image') loadImage = true;
+		if (loadFont && loadBody && loadImage) init()
 	}
 
 	(function() {
