--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Template1/Ads/300x250/CON/O365_CARTABNDMCON_USA_300x250_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Template1/Ads/300x250/CON/O365_CARTABNDMCON_USA_300x250_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm
@@ -33,6 +33,7 @@
 <meta name="ad.size" content="width=300,height=250">
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation, initReady;
+var singleImageLoadFlag = false, completeLoadFlag = false;
 function init() {
 	initReady = false
 	canvas = document.getElementById("canvas");
@@ -49,61 +50,66 @@ function init() {
 function handleFileLoad(evt, comp) {
 	var images=comp.getImages();
 	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }
+	singleImageLoadFlag = true;
+	if(completeLoadFlag) {handleComplete(evt,comp)}
 }
 function handleComplete(evt,comp) {
 	//This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
-	var lib=comp.getLibrary();
-	var ss=comp.getSpriteSheet();
-	var queue = evt.target;
-	var ssMetadata = lib.ssMetadata;
-	for(i=0; i<ssMetadata.length; i++) {
-		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
-	}
-	exportRoot = new lib.O365_CARTABNDMCON_USA_300x250_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1();
-	stage = new lib.Stage(canvas);
-	stage.addChild(exportRoot);
-	//Registers the "tick" event listener.
-	fnStartAnimation = function() {
-		createjs.Ticker.framerate = lib.properties.fps;
-		createjs.Ticker.addEventListener("tick", stage);
-	}
-	//Code to support hidpi screens and responsive scaling.
-	function makeResponsive(isResp, respDim, isScale, scaleType) {
-		var lastW, lastH, lastS=1;
-		window.addEventListener('resize', resizeCanvas);
-		resizeCanvas();
-		function resizeCanvas() {
-			var w = lib.properties.width, h = lib.properties.height;
-			var iw = window.innerWidth, ih=window.innerHeight;
-			var pRatio = window.devicePixelRatio || 1, xRatio=iw/w, yRatio=ih/h, sRatio=1;
-			if(isResp) {
-				if((respDim=='width'&&lastW==iw) || (respDim=='height'&&lastH==ih)) {
-					sRatio = lastS;
-				}
-				else if(!isScale) {
-					if(iw<w || ih<h)
-						sRatio = Math.min(xRatio, yRatio);
-				}
-				else if(scaleType==1) {
-					sRatio = Math.min(xRatio, yRatio);
-				}
-				else if(scaleType==2) {
-					sRatio = Math.max(xRatio, yRatio);
-				}
-			}
-			canvas.width = w*pRatio*sRatio;
-			canvas.height = h*pRatio*sRatio;
-			canvas.style.width = dom_overlay_container.style.width = anim_container.style.width =  w*sRatio+'px';
-			canvas.style.height = anim_container.style.height = dom_overlay_container.style.height = h*sRatio+'px';
-			stage.scaleX = pRatio*sRatio;
-			stage.scaleY = pRatio*sRatio;
-			lastW = iw; lastH = ih; lastS = sRatio;
+	completeLoadFlag = true;
+	if(singleImageLoadFlag) {
+		var lib=comp.getLibrary();
+		var ss=comp.getSpriteSheet();
+		var queue = evt.target;
+		var ssMetadata = lib.ssMetadata;
+		for(i=0; i<ssMetadata.length; i++) {
+			ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 		}
+		exportRoot = new lib.O365_CARTABNDMCON_USA_300x250_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1();
+		stage = new lib.Stage(canvas);
+		stage.addChild(exportRoot);
+		//Registers the "tick" event listener.
+		fnStartAnimation = function() {
+			createjs.Ticker.framerate = lib.properties.fps;
+			createjs.Ticker.addEventListener("tick", stage);
+		}
+		//Code to support hidpi screens and responsive scaling.
+		function makeResponsive(isResp, respDim, isScale, scaleType) {
+			var lastW, lastH, lastS=1;
+			window.addEventListener('resize', resizeCanvas);
+			resizeCanvas();
+			function resizeCanvas() {
+				var w = lib.properties.width, h = lib.properties.height;
+				var iw = window.innerWidth, ih=window.innerHeight;
+				var pRatio = window.devicePixelRatio || 1, xRatio=iw/w, yRatio=ih/h, sRatio=1;
+				if(isResp) {
+					if((respDim=='width'&&lastW==iw) || (respDim=='height'&&lastH==ih)) {
+						sRatio = lastS;
+					}
+					else if(!isScale) {
+						if(iw<w || ih<h)
+							sRatio = Math.min(xRatio, yRatio);
+					}
+					else if(scaleType==1) {
+						sRatio = Math.min(xRatio, yRatio);
+					}
+					else if(scaleType==2) {
+						sRatio = Math.max(xRatio, yRatio);
+					}
+				}
+				canvas.width = w*pRatio*sRatio;
+				canvas.height = h*pRatio*sRatio;
+				canvas.style.width = dom_overlay_container.style.width = anim_container.style.width =  w*sRatio+'px';
+				canvas.style.height = anim_container.style.height = dom_overlay_container.style.height = h*sRatio+'px';
+				stage.scaleX = pRatio*sRatio;
+				stage.scaleY = pRatio*sRatio;
+				lastW = iw; lastH = ih; lastS = sRatio;
+			}
+		}
+		makeResponsive(false,'both',false,2);
+		AdobeAn.compositionLoaded(lib.properties.id);
+		fnStartAnimation();
+		TweenMax.delayedCall(0.2,startBanner)
 	}
-	makeResponsive(false,'both',false,2);
-	AdobeAn.compositionLoaded(lib.properties.id);
-	fnStartAnimation();
-	TweenMax.delayedCall(0.2,startBanner)
 
 }
 
