--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads.html
@@ -231,7 +231,7 @@
           document.querySelector('#ad' + adSize).appendChild(iframe);
           var iframeDoc = iframe.contentWindow ? iframe.contentWindow : iframe.contentDocument && iframe.contentDocument.document ? iframe.contentDocument.document : iframe.contentDocument;
         	iframeDoc.document.open();
-          iframeDoc.document.write('<iframe src="ads/'+template+'/ads/'+adSize+'/z'+adSize+'.html" width="'+adWidth+'" height="'+adHeight+'" style="display:block;" scrolling="no" frameborder="0" allowtransparency="true" hspace="0" vspace="0" marginwidth="0" marginheight="0"></iframe>');
+          iframeDoc.document.write('<iframe src="ads/'+template+'/Ads/'+adSize+'/z'+adSize+'.html" width="'+adWidth+'" height="'+adHeight+'" style="display:block;" scrolling="no" frameborder="0" allowtransparency="true" hspace="0" vspace="0" marginwidth="0" marginheight="0"></iframe>');
         	iframeDoc.document.close();
           iframeDoc.document.body.style.margin = 0;
           iframeDoc.document.head.appendChild(amoScript);
