--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads.html
@@ -93,7 +93,7 @@
       }
       #title {
         font-family: Arial;
-        display: inline-block;
+        /* display: inline-block; */
         vertical-align: top;
         padding: 10px 5px 2px 5px;
         margin: 0px 5px 2px 5px;
