--- a/C/Crocs/Crocs_SpringSummer_2019/ad.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ad.html
@@ -120,6 +120,7 @@
           var templates = {
             'Celebrity': `var cam = {
               adSize: data.AD_SIZE,
+              language: data.LANGUAGE,
               backgroundColor: data.TEXT_6,
               layoutColor: data.TEXT_7,
               logoImage: 'assets/Crocs_CAYA_LOGO.png',
@@ -136,6 +137,7 @@
             }`,
             'On Fig': `var cam = {
               adSize: data.AD_SIZE,
+              language: data.LANGUAGE,
               backgroundColor: data.TEXT_6,
               layoutColor: data.TEXT_7,
               logoImage: 'assets/Crocs_CAYA_LOGO.png',
