--- a/C/Crocs/Crocs_SpringSummer_2019/ads/300x250/300x250.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/300x250/300x250.html
@@ -204,6 +204,7 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
+            language: 'Chinese',
             backgroundColor: 'darkblue',
             layoutColor: '#f1718b',
             // label: 'CrocsSerenaSandal',
