--- a/C/Crocs/Crocs_SpringSummer_2019/ads/320x50/320x50.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/320x50/320x50.html
@@ -203,6 +203,7 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
+            language: 'Chinese',
             backgroundColor: 'darkblue',
             layoutColor: '#f1718b',
             logoImage: 'assets/Crocs_CAYA_LOGO.png',
