--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/160x600/Day/Office365Home_ModernHUPHomeF_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/160x600/Day/Office365Home_ModernHUPHomeF_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm
@@ -11,7 +11,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>O365_RENWL_USA_300x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1</title>
+<title>Office365Home_ModernHUPHomeF_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1</title>
 <style>
 	@font-face {
 		font-family: 'Segoe Pro';
@@ -20,20 +20,18 @@
 		font-style: Regular;
 		text-rendering: geometricPrecision;
 	}
-	body {
-	    background-color:#909090;
-			overflow: hidden;
-	}
+body {
+    background-color:#909090;
+}
 </style>
-<!-- <script>var clickTag = "http://www.google.com";</script>
-<script src="copy.js"></script> -->
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="O365_RENWL_USA_300x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.js?1501171107836"></script>
-<meta name="ad.size" content="width=300,height=600">
+<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+<script src="Office365Home_ModernHUPHomeF_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.js?1501171107836"></script>
+<meta name="ad.size" content="width=160,height=600">
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation, initReady;
-
 function init() {
 	initReady = false
 	canvas = document.getElementById("canvas");
@@ -52,8 +50,8 @@ function init() {
 	image.src = lib.properties.manifest[0].src;
 }
 function handleFileLoad(evt, comp) {
-	var images=comp.getImages();
-	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }
+	var images=comp.getImages();	
+	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }	
 }
 function handleComplete(evt,comp) {
 	//This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
@@ -64,63 +62,62 @@ function handleComplete(evt,comp) {
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.O365_RENWL_USA_300x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1();
+	exportRoot = new lib.Office365Home_ModernHUPHomeF_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1();
 	stage = new lib.Stage(canvas);
-	stage.addChild(exportRoot);
+	stage.addChild(exportRoot);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
-		createjs.Ticker.framerate = lib.properties.fps;
+		createjs.Ticker.setFPS(lib.properties.fps);
 		createjs.Ticker.addEventListener("tick", stage);
-	}
+	}	    
 	//Code to support hidpi screens and responsive scaling.
-	function makeResponsive(isResp, respDim, isScale, scaleType) {
-		var lastW, lastH, lastS=1;
-		window.addEventListener('resize', resizeCanvas);
-		resizeCanvas();
-		function resizeCanvas() {
-			var w = lib.properties.width, h = lib.properties.height;
-			var iw = window.innerWidth, ih=window.innerHeight;
-			var pRatio = window.devicePixelRatio || 1, xRatio=iw/w, yRatio=ih/h, sRatio=1;
-			if(isResp) {
-				if((respDim=='width'&&lastW==iw) || (respDim=='height'&&lastH==ih)) {
-					sRatio = lastS;
-				}
-				else if(!isScale) {
-					if(iw<w || ih<h)
-						sRatio = Math.min(xRatio, yRatio);
-				}
-				else if(scaleType==1) {
-					sRatio = Math.min(xRatio, yRatio);
-				}
-				else if(scaleType==2) {
-					sRatio = Math.max(xRatio, yRatio);
-				}
-			}
-			canvas.width = w*pRatio*sRatio;
+	function makeResponsive(isResp, respDim, isScale, scaleType) {		
+		var lastW, lastH, lastS=1;		
+		window.addEventListener('resize', resizeCanvas);		
+		resizeCanvas();		
+		function resizeCanvas() {			
+			var w = lib.properties.width, h = lib.properties.height;			
+			var iw = window.innerWidth, ih=window.innerHeight;			
+			var pRatio = window.devicePixelRatio || 1, xRatio=iw/w, yRatio=ih/h, sRatio=1;			
+			if(isResp) {                
+				if((respDim=='width'&&lastW==iw) || (respDim=='height'&&lastH==ih)) {                    
+					sRatio = lastS;                
+				}				
+				else if(!isScale) {					
+					if(iw<w || ih<h)						
+						sRatio = Math.min(xRatio, yRatio);				
+				}				
+				else if(scaleType==1) {					
+					sRatio = Math.min(xRatio, yRatio);				
+				}				
+				else if(scaleType==2) {					
+					sRatio = Math.max(xRatio, yRatio);				
+				}			
+			}			
+			canvas.width = w*pRatio*sRatio;			
 			canvas.height = h*pRatio*sRatio;
-			canvas.style.width = dom_overlay_container.style.width = anim_container.style.width =  w*sRatio+'px';
+			canvas.style.width = dom_overlay_container.style.width = anim_container.style.width =  w*sRatio+'px';				
 			canvas.style.height = anim_container.style.height = dom_overlay_container.style.height = h*sRatio+'px';
-			stage.scaleX = pRatio*sRatio;
-			stage.scaleY = pRatio*sRatio;
-			lastW = iw; lastH = ih; lastS = sRatio;
+			stage.scaleX = pRatio*sRatio;			
+			stage.scaleY = pRatio*sRatio;			
+			lastW = iw; lastH = ih; lastS = sRatio;		
 		}
 	}
-	makeResponsive(false,'both',false,2);
+	makeResponsive(false,'both',false,2);	
 	AdobeAn.compositionLoaded(lib.properties.id);
-	fnStartAnimation();
-	initReady=true
-
+	fnStartAnimation();	
 	TweenMax.delayedCall(0.2,startBanner)
+
 }
 
-var loadFont = false
+	var loadFont = false
 	var loadBody = false
 	function loaded(type) {
 		if (type=='font') loadFont=true
 		if (type=='body') loadBody=true
 		if (loadFont && loadBody) init()
 	}
-
+	
 	(function() {
 		// Optimization for Repeat Views
 
@@ -148,12 +145,13 @@ var loadFont = false
 
 </script>
 <!-- write your code here -->
+
 </head>
-<body onload="init();" style="margin:0px;">
-<div id="rHit" style="display:block; position:absolute; top:0px; left:278px; width:22px; height:20px; z-index:100000 !important; cursor:pointer; "></div>
-	<div id="animation_container" style="background-color:#FFFFFF; width:300px; height:600px">
-		<canvas id="canvas" width="300" height="600" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer; "></canvas>
-		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:300px; height:600px; position: absolute; left: 0px; top: 0px; display: block;">
+<body onload="loaded('body')" style="margin:0px;">
+<div id="rHit" style="display:block; position:absolute; top:0px; left:138px; width:22px; height:20px; z-index:100000 !important; cursor:pointer; "></div>
+	<div id="animation_container" style="background-color:#FFFFFF; width:160px; height:600px">
+		<canvas id="canvas" width="160" height="600" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer; "></canvas>
+		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:160px; height:600px; position: absolute; left: 0px; top: 0px; display: block;">
 		<div style="position: absolute; border: 1px solid black; box-sizing: border-box; background-color:transparent; top: 0; left: 0; width: 100%; bottom: 0;"></div>
 		</div>
 	</div>
@@ -191,7 +189,7 @@ var startBanner = function(){
 					stage.removeAllChildren();
 					stage.update();
 
-				   //$('#canvas').remove();$('#animation_container').prepend('<canvas id="canvas" width="300" height="250" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer; "></canvas>');
+				   //$('#canvas').remove();$('#animation_container').prepend('<canvas id="canvas" width="160" height="160" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer; "></canvas>');
 					TweenMax.delayedCall(0.2,init)
 
 				}
@@ -202,10 +200,13 @@ var startBanner = function(){
 						var bannerData = parentWindow.getBannerData();
 						var color = '<#505050>';
 						bannerData.headline1 = eval(bannerData.headline1);
-		        		bannerData.headline2 = eval(bannerData.headline2);
-		        		bannerData.headline3 = eval(bannerData.headline3);
+				        bannerData.headline2 = eval(bannerData.headline2);
+				        //bannerData.headline3 = eval(bannerData.headline3);
 		        		bannerData.headline4 = eval(bannerData.headline4);
-						bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"23px",8,0,"50","300", "center"] : '';
+						bannerData.costline3 = ["<#505050> ","10.5px",0,-11,"15","350", "left"];
+						bannerData.costline1 = ["<#D83B01> ","20px",0,0,"32","350", "left"];
+						bannerData.costline2 = ["<#505050> ","10px",60,8,"15","350", "left"];
+						bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"24px",1,0,"50","300", "center"] : '';
 						animation_container.addEventListener("click", function(){
 							parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
 							var imageClickTracker = new Image();
