--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/160x600/z160x600.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/160x600/z160x600.html
@@ -36,9 +36,9 @@
         ];
 
         if(contentD && contentD.length) { contentD.forEach(function(data) { amo.registerContent(data); }); }
-        amo.registerVariation("layout", "Renewal");
-        // amo.registerVariation("layout", "Day");
-        // amo.registerVariation("layout", "Beach");
+        // amo.registerVariation("layout", "Night");
+        // amo.registerVariation("layout", "HUP");
+        amo.registerVariation("layout", "Beach");
         amo.registerVariation("headline1", "[color+'Access your |world, virtually |anywhere','19px',15,87,'22','350', 'left']");
         amo.registerVariation("headline2", "[color+'Continue using |<#D83B01>Office 365 '+color+'across |even more devices |with Home |subscription','13.5px',16,162,'15','350', 'left']");
         amo.registerVariation("headline4", "['<#505050>Offer valid to employees of |eligible companies only','9px',15,572,'11','350', 'left']");
@@ -109,10 +109,10 @@
         var clickTracker = adData.clickTracker;
         var adUrl = '';
         switch(adData.layout){
-          case 'Beach' : adURL = 'Beach/O365_AccessYourWorld_USA_160x600_BAN_1TBCloud_Access_NA_NA_ANI_BN_T3_1.htm';break;
-          case 'Day' : adURL = 'Day/O365_AccessYourWorld_USA_160x600_BAN_1TBCloud_Access_NA_NA_ANI_BN_T2_1.htm';break;
+          case 'Beach' : adURL = 'Beach/Office365Home_ModernHUPBeach_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
+          case 'Day' : adURL = 'Day/Office365Home_ModernHUPHomeF_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
           case 'Night' : adURL = 'Night/O365_AccessYourWorld_USA_160x600_BAN_1TBCloud_Access_NA_NA_ANI_BN_T1_1.htm';break;
-          case 'Renewal' : adURL = 'Renewal/O365_RENWL_USA_160x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm';break;
+          case 'Renewal' : adURL = 'Renewal/Office365Home_ModernHUPCouchFAM_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
           case 'HUP' : adURL = 'HUP/Office365Home_ModernHUPHomeM_USA_160x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
         }
         var iframe = document.createElement('iframe');
