--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/300x600/z300x600.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/300x600/z300x600.html
@@ -36,9 +36,9 @@
         ];
 
         if(contentD && contentD.length) { contentD.forEach(function(data) { amo.registerContent(data); }); }
-        amo.registerVariation("layout", "Renewal");
+        // amo.registerVariation("layout", "Renewal");
         // amo.registerVariation("layout", "Day");
-        // amo.registerVariation("layout", "Beach");
+        amo.registerVariation("layout", "Beach");
         amo.registerVariation("headline1", "[color+'Access your world, |virtually anywhere','22px',32,71,'26','350', 'left']");
         amo.registerVariation("headline2", "[color+'Continue using <#D83B01>Office 365 |'+color+'across even more devices |with Home subscription','15.4px',32,130,'17','350', 'left']");
         amo.registerVariation("headline3", "['<#505050> ','10.5px',16,122,'12','350', 'left']");
@@ -113,10 +113,10 @@
         var clickTracker = adData.clickTracker;
         var adUrl = '';
         switch(adData.layout){
-          case 'Beach' : adURL = 'Beach/O365_AccessYourWorld_USA_300x600_BAN_1TBCloud_Access_NA_NA_ANI_BN_T3_1.htm';break;
-          case 'Day' : adURL = 'Day/O365_AccessYourWorld_USA_300x600_BAN_1TBCloud_Access_NA_NA_ANI_BN_T2_1.htm';break;
+          case 'Beach' : adURL = 'Beach/Office365Home_ModernHUPBeach_USA_300x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
+          case 'Day' : adURL = 'Day/Office365Home_ModernHUPHomeF_USA_300x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
           case 'Night' : adURL = 'Night/O365_AccessYourWorld_USA_300x600_BAN_1TBCloud_Access_NA_NA_ANI_BN_T1_1.htm';break;
-          case 'Renewal' : adURL = 'Renewal/O365_RENWL_USA_300x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm';break;
+          case 'Renewal' : adURL = 'Renewal/Office365Home_ModernHUPCouchFAM_USA_300x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
           case 'HUP' : adURL = 'HUP/Office365Home_ModernHUPHomeM_USA_300x600_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm';break;
         }
         var iframe = document.createElement('iframe');
