--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/728x90/HUP/Office365Home_ModernHUPHomeM_USA_728x90_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template3/Ads/728x90/HUP/Office365Home_ModernHUPHomeM_USA_728x90_DCO_1TB_Access_NA_NA_ANI_LEA_NA_1.htm
@@ -25,13 +25,14 @@ body {
 }
 </style>
 
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
 <script src="HUP_Home_Lifestyle_728x90.js?1501171107836"></script>
 <meta name="ad.size" content="width=728,height=90">
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation, initReady;
-
+	
 function init() {
 	initReady = false
 	canvas = document.getElementById("canvas");
@@ -50,8 +51,8 @@ function init() {
 	image.src = lib.properties.manifest[0].src;
 }
 function handleFileLoad(evt, comp) {
-	var images=comp.getImages();
-	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }
+	var images=comp.getImages();	
+	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }	
 }
 function handleComplete(evt,comp) {
 	//This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
@@ -64,53 +65,53 @@ function handleComplete(evt,comp) {
 	}
 	exportRoot = new lib.HUP_Home_Lifestyle_728x90();
 	stage = new lib.Stage(canvas);
-	stage.addChild(exportRoot);
+	stage.addChild(exportRoot);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
 		createjs.Ticker.framerate = lib.properties.fps;
 		createjs.Ticker.addEventListener("tick", stage);
-	}
+	}	    
 	//Code to support hidpi screens and responsive scaling.
-	function makeResponsive(isResp, respDim, isScale, scaleType) {
-		var lastW, lastH, lastS=1;
-		window.addEventListener('resize', resizeCanvas);
-		resizeCanvas();
-		function resizeCanvas() {
-			var w = lib.properties.width, h = lib.properties.height;
-			var iw = window.innerWidth, ih=window.innerHeight;
-			var pRatio = window.devicePixelRatio || 1, xRatio=iw/w, yRatio=ih/h, sRatio=1;
-			if(isResp) {
-				if((respDim=='width'&&lastW==iw) || (respDim=='height'&&lastH==ih)) {
-					sRatio = lastS;
-				}
-				else if(!isScale) {
-					if(iw<w || ih<h)
-						sRatio = Math.min(xRatio, yRatio);
-				}
-				else if(scaleType==1) {
-					sRatio = Math.min(xRatio, yRatio);
-				}
-				else if(scaleType==2) {
-					sRatio = Math.max(xRatio, yRatio);
-				}
-			}
-			canvas.width = w*pRatio*sRatio;
+	function makeResponsive(isResp, respDim, isScale, scaleType) {		
+		var lastW, lastH, lastS=1;		
+		window.addEventListener('resize', resizeCanvas);		
+		resizeCanvas();		
+		function resizeCanvas() {			
+			var w = lib.properties.width, h = lib.properties.height;			
+			var iw = window.innerWidth, ih=window.innerHeight;			
+			var pRatio = window.devicePixelRatio || 1, xRatio=iw/w, yRatio=ih/h, sRatio=1;			
+			if(isResp) {                
+				if((respDim=='width'&&lastW==iw) || (respDim=='height'&&lastH==ih)) {                    
+					sRatio = lastS;                
+				}				
+				else if(!isScale) {					
+					if(iw<w || ih<h)						
+						sRatio = Math.min(xRatio, yRatio);				
+				}				
+				else if(scaleType==1) {					
+					sRatio = Math.min(xRatio, yRatio);				
+				}				
+				else if(scaleType==2) {					
+					sRatio = Math.max(xRatio, yRatio);				
+				}			
+			}			
+			canvas.width = w*pRatio*sRatio;			
 			canvas.height = h*pRatio*sRatio;
-			canvas.style.width = dom_overlay_container.style.width = anim_container.style.width =  w*sRatio+'px';
+			canvas.style.width = dom_overlay_container.style.width = anim_container.style.width =  w*sRatio+'px';				
 			canvas.style.height = anim_container.style.height = dom_overlay_container.style.height = h*sRatio+'px';
-			stage.scaleX = pRatio*sRatio;
-			stage.scaleY = pRatio*sRatio;
-			lastW = iw; lastH = ih; lastS = sRatio;
+			stage.scaleX = pRatio*sRatio;			
+			stage.scaleY = pRatio*sRatio;			
+			lastW = iw; lastH = ih; lastS = sRatio;		
 		}
 	}
-	makeResponsive(false,'both',false,2);
+	makeResponsive(false,'both',false,2);	
 	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
 	initReady=true
 
 	TweenMax.delayedCall(0.2,startBanner)
 }
-
+	
 var loadFont = false
 	var loadBody = false
 	function loaded(type) {
@@ -118,7 +119,7 @@ var loadFont = false
 		if (type=='body') loadBody=true
 		if (loadFont && loadBody) init()
 	}
-
+	
 	(function() {
 		// Optimization for Repeat Views
 
@@ -189,7 +190,7 @@ var startBanner = function(){
 					stage.removeAllChildren();
 					stage.update();
 
-				   //$('#canvas').remove();$('#animation_container').prepend('<canvas id="canvas" width="300" height="250" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer; "></canvas>');
+				   //$('#canvas').remove();$('#animation_container').prepend('<canvas id="canvas" width="728" height="90" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer; "></canvas>');
 					TweenMax.delayedCall(0.2,init)
 
 				}
@@ -201,9 +202,12 @@ var startBanner = function(){
 						var color = '<#505050>';
 						bannerData.headline1 = eval(bannerData.headline1);
 		        		bannerData.headline2 = eval(bannerData.headline2);
-						bannerData.headline3 = eval(bannerData.headline3);
+		        		bannerData.headline3 = eval(bannerData.headline3);
 		        		bannerData.headline4 = eval(bannerData.headline4);
-						bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"25px",10,0,"50","300", "center"] : '';
+						bannerData.costline3 = ["<#505050> ","10.5px",0,-11,"15","350", "left"];
+						bannerData.costline1 = ["<#D83B01> ","20px",0,0,"32","350", "left"];
+						bannerData.costline2 = ["<#505050> ","10px",60,8,"15","350", "left"];
+						bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"24px",1,0,"50","300", "center"] : '';
 						animation_container.addEventListener("click", function(){
 							parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
 							var imageClickTracker = new Image();
