--- a/C/Crocs/Crocs_SpringSummer_2019/ads/300x600(OnFigure)/300x600.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/300x600(OnFigure)/300x600.html
@@ -289,6 +289,9 @@
           if(navigator.userAgent.toLowerCase().indexOf('firefox') != -1){
             ad.layers.backgroundText.style.lineHeight = '1.03';
           }
+          if(navigator.userAgent.toLowerCase().indexOf('windows') != -1){
+            ad.layers.backgroundText.style.lineHeight = '1.02';
+          }
           var imagePath = adData.logoImage;
           var image = new Image();
           image.crossOrigin = 'Anonymous';
