--- a/C/Crocs/Crocs_SpringSummer_2019/ads/160x600/160x600.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/160x600/160x600.html
@@ -183,11 +183,13 @@
       </div>
       <div id="cta" class="text proximaNovaExtrabold"
         data-text="ctaText"
+        data-style="padding:0 5px;"
         style="top:550px;
           left:30px;
           width:100px;
           height:32px;
           font-size:14px;
+          line-height: 24px;
           box-sizing:border-box;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -208,7 +210,7 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
-            language: 'Chinese',
+            language: 'English',
             backgroundColor: 'darkblue',
             layoutColor: '#f1718b',
             // layoutColor: '#f1718b',
@@ -222,7 +224,7 @@
             productImage: 'assets/160x600_productImage.png',
             productShadowImage: 'assets/160x600_productImage(shadow).png',
             productText: 'Swiftwater™ Sandal',
-            ctaText: 'SHOP NOW',
+            ctaText: 'JETZT KAUFEN',
             clickUrl: 'https://adobe.com/#crocs',
           },
           feed: [
