--- a/C/Crocs/Crocs_SpringSummer_2019/ads/300x600(OnFigure)/300x600.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/300x600(OnFigure)/300x600.html
@@ -185,11 +185,13 @@
       </div>
       <div id="cta" class="text proximaNovaExtrabold"
         data-text="ctaText"
+        data-style="padding:0 5px;"
         style="top:552px;
           left:160px;
           width:102px;
           height:33px;
           font-size:14px;
+          line-height: 24px;
           box-sizing:border-box;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -210,7 +212,7 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
-            language: 'Chinese',
+            language: 'English',
             backgroundColor: 'darkblue',
             layoutColor: '#f1718b',
             logoImage: 'assets/Crocs_CAYA_LOGO.png',
@@ -223,7 +225,7 @@
             productImage: 'assets/300x600_productImage.png',
             productShadowImage: 'assets/300x600_productImage(shadow).png',
             productText: 'Crocband™ Platform Clog',
-            ctaText: 'SHOP NOW',
+            ctaText: 'JETZT KAUFEN',
             clickUrl: 'https://adobe.com/#crocs',
           },
           feed: [
