--- a/C/Crocs/Crocs_SpringSummer_2019/ads/728x90/728x90.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/728x90/728x90.html
@@ -194,11 +194,13 @@
       </div>
       <div id="cta" class="text proximaNovaExtrabold"
         data-text="ctaText"
+        data-style="padding:0 5px;"
         style="top:50px;
           left:610px;
           width:90px;
           height:29px;
           font-size:13px;
+          line-height: 24px;
           box-sizing:border-box;
           -webkit-transition:transform ease-out 0.3s;
           transition:transform ease-out 0.3s;">
@@ -232,7 +234,7 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
-            language: 'Chinese',
+            language: 'English',
             backgroundColor: 'darkblue',
             layoutColor: '#f1718b',
             logoImage: 'assets/Crocs_CAYA_LOGO.png',
@@ -245,7 +247,7 @@
             productImage: 'assets/728x90_productImage.png',
             productShadowImage: 'assets/728x90_productImage(shadow).png',
             productText: 'Swiftwater™ Sandal',
-            ctaText: 'SHOP NOW',
+            ctaText: 'JETZT KAUFEN',
             clickUrl: 'https://adobe.com/#crocs',
           },
           feed: [
