--- a/C/Crocs/Crocs_SpringSummer_2019/ads/970x250/970x250.html
+++ b/C/Crocs/Crocs_SpringSummer_2019/ads/970x250/970x250.html
@@ -194,11 +194,13 @@
       </div>
       <div id="cta" class="text proximaNovaExtrabold"
         data-text="ctaText"
+        data-style="padding:0 7px;"
         style="top:137px;
           right:33px;
           width:128px;
           height:41px;
           font-size:18px;
+          line-height: 30px;
           box-sizing:border-box;
           -webkit-transition:transform ease-out 0.3s;
           transition:transform ease-out 0.3s;">
@@ -232,7 +234,7 @@
         ad.contentSetup({
           cam: {
             // layout: 'ClassicClog',
-            language: 'Chinese',
+            language: 'English',
             backgroundColor: 'darkblue',
             layoutColor: '#f1718b',
             logoImage: 'assets/Crocs_CAYA_LOGO.png',
@@ -245,7 +247,7 @@
             productImage: 'assets/970x250_productImage.png',
             productShadowImage: 'assets/970x250_productImage(shadow).png',
             productText: 'Crocband™ Platform Clog',
-            ctaText: 'SHOP NOW',
+            ctaText: 'JETZT KAUFEN',
             clickUrl: 'https://adobe.com/#crocs',
           },
           feed: [
