--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads.html
@@ -261,12 +261,13 @@
         });
 
       }
-      var searchFlag = false;
-      if(location.hash && location.hash.length) {
-        var selector = location.hash.split('#')[1];
-        loadContent(selector ? atob(selector) : 'Australia');
-      } else { loadContent('Australia'); }
-
+      var loadPage = function(){
+        var searchFlag = false;
+        if(location.hash && location.hash.length) {
+          var selector = location.hash.split('#')[1];
+          loadContent(selector ? atob(selector) : 'Australia');
+        } else { loadContent('Australia'); }
+      }
       window.getBannerData = function(k){
         var obj = {};
         for(var j in bannerData) {
