--- a/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ad.html
+++ b/C/Crocs/Crocs_SpringSummer_Lifestyle_2019/ad.html
@@ -277,8 +277,8 @@
         var searchFlag = false;
         if(location.hash && location.hash.length) {
           var selector = location.hash.split('#')[1];
-          loadContent(selector ? atob(selector) : 'Jasmyne');
-        } else { loadContent('Jasmyne'); }
+          loadContent(selector ? atob(selector) : 'Zooey Deschanel');
+        } else { loadContent('Zooey Deschanel'); }
       };
     </script>
   </body>
